python-test_driven_development/tests/4-print_square.txt
Module that provides print_square function
~~~~~~~~~~~~~~~~~~~~~~~~
Prototype: def print_square(size):
~~~~~~~~~~~~~~~~~~~~~~~~

>>> print_square = __import__('4-print_square').print_square
>>> print_square(2)
##
##
>>> print_square(5)
#####
#####
#####
#####
#####
>>> print_square(0)
>>> print_square(-1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 6, in print_square
    raise ValueError('size must be >= 0')
ValueError: size must be >= 0
>>> print_square(3.1416)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 4, in print_square
    raise TypeError('size must be an integer')
TypeError: size must be an integer
>>> print_square(None)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 4, in print_square
    raise TypeError('size must be an integer')
TypeError: size must be an integer
>>> print_square()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: print_square() missing 1 required positional argument: 'size'
>>> print_square('Dinosaur')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/root/holbertonschool-higher_level_programming/python-test_driven_development/4-print_square.py", line 4, in print_square
    raise TypeError('size must be an integer')
TypeError: size must be an integer